# atl-swift-argument-parser

./: CHANGELOG.md  Package.swift  Package@swift-5.6.swift  README.md
Examples/: CMakeLists.txt
Examples/count-lines/: CountLines.swift
Examples/math/: Math.swift
Examples/repeat/: Repeat.swift
Examples/roll/: main.swift
Plugins/GenerateManual/: GenerateManualPlugin.swift
Sources/: CMakeLists.txt
Sources/AtlArgumentParser/: CMakeLists.txt
Sources/AtlArgumentParserTestHelpers/: CMakeLists.txt  TestHelpers.swift
Sources/AtlArgumentParserToolInfo/: CMakeLists.txt
Tests/: CMakeLists.txt
Tests/AtlArgumentParserEndToEndTests/: CMakeLists.txt  CustomParsingEndToEndTests.swift  DefaultSubcommandEndToEndTests.swift  DefaultsEndToEndTests.swift  EnumEndToEndTests.swift  EqualsEndToEndTests.swift  FlagsEndToEndTests.swift  JoinedEndToEndTests.swift  LongNameWithShortDashEndToEndTests.swift  NestedCommandEndToEndTests.swift  OptionGroupEndToEndTests.swift  OptionalEndToEndTests.swift  PositionalEndToEndTests.swift  RawRepresentableEndToEndTests.swift  RepeatingEndToEndTests+ParsingStrategy.swift  RepeatingEndToEndTests.swift  ShortNameEndToEndTests.swift  SimpleEndToEndTests.swift  SingleValueParsingStrategyTests.swift  SourceCompatEndToEndTests.swift  SubcommandEndToEndTests.swift  TransformEndToEndTests.swift  UnparsedValuesEndToEndTest.swift  ValidationEndToEndTests.swift
Tests/AtlArgumentParserExampleTests/: CountLinesExampleTests.swift  MathExampleTests.swift  RepeatExampleTests.swift  RollDiceExampleTests.swift
cmake/modules/: CMakeLists.txt  (+1 more)
(+70 files in other folders)
